Fix content item spacing values

--- a/css/style.css
+++ b/css/style.css
@@ -421,11 +421,11 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  padding: 25px 150px 0 150px;
+  padding: 25px 75px 0 75px;
 }
 
 .item .buttons a {
-  font-size: 1.5em;
+  font-size: 0.75em;
   letter-spacing: 0.125em;
   background-color: var(--secondary);
   padding: 15px;
